@@ -36,6 +36,7 @@ npc: npc/warps/cities/payon.txt
 npc: npc/warps/cities/prontera.txt
 npc: npc/warps/cities/rachel.txt
 npc: npc/warps/cities/umbala.txt
+npc: npc/warps/cities/veins.txt
 npc: npc/warps/cities/yggdrasil.txt
 npc: npc/warps/cities/yuno.txt
 // -------------------------- Dungeons --------------------------
@@ -53,6 +54,7 @@ npc: npc/warps/dungeons/gon_dun.txt
 npc: npc/warps/dungeons/ice_dun.txt
 npc: npc/warps/dungeons/izlude_dun.txt
 npc: npc/warps/dungeons/juperos.txt
+npc: npc/warps/dungeons/kiel_dun.txt
 npc: npc/warps/dungeons/lhalzen_dun.txt
 npc: npc/warps/dungeons/louyang_dun.txt
 npc: npc/warps/dungeons/lutie_dun.txt
@@ -64,9 +66,9 @@ npc: npc/warps/dungeons/prt_dun.txt
 npc: npc/warps/dungeons/rachel_dun.txt
 npc: npc/warps/dungeons/thana_dun.txt
 //npc: npc/warps/dungeons/thana_custom.txt
+npc: npc/warps/dungeons/thor_dun.txt
 npc: npc/warps/dungeons/umbala_dun.txt
 npc: npc/warps/dungeons/yuno_dun.txt
-npc: npc/warps/dungeons/kiel_dun.txt
 // --------------------------- Fields ---------------------------
 npc: npc/warps/fields/amatsu_fild.txt
 npc: npc/warps/fields/com_fild.txt
@@ -84,6 +86,7 @@ npc: npc/warps/fields/payon_fild.txt
 npc: npc/warps/fields/prontera_fild.txt
 npc: npc/warps/fields/rachel_fild.txt
 npc: npc/warps/fields/umbala_fild.txt
+npc: npc/warps/fields/veins_fild.txt
 npc: npc/warps/fields/yuno_fild.txt
 npc: npc/warps/fields/abyss_warper.txt
 // --------------------------- Others ---------------------------
