@@ -29,6 +29,8 @@ extern char mapindex_cfgfile[80];
 #define MAP_LIGHTHALZEN "lighthalzen.gat"
 #define MAP_EINBECH "einbech.gat"
 #define MAP_HUGEL "hugel.gat"
+#define MAP_RACHEL "rachel.gat"
+#define MAP_VEINS "veins.gat"
 #define MAP_JAIL "sec_pri.gat"
 unsigned short mapindex_name2id(char*);
 const char* mapindex_id2name(unsigned short);
