@@ -4244,7 +4244,7 @@ void battle_set_defaults() {
 	battle_config.autospell_stacking = 0;
 	battle_config.override_mob_names = 0;
 	battle_config.min_chat_delay = 0;
-	battle_config.friend_auto_add = 0;
+	battle_config.friend_auto_add = 1;
 	battle_config.hvan_explosion_intimate = 45000;	//[orn]
 	battle_config.homunculus_show_growth = 0;	//[orn]
 	battle_config.homunculus_friendly_rate = 100;
